src/merge.lisp


int setupterm(const char *term, int filedes, int *errret);
int setterm(const char *term);
TERMINAL *set_curterm(TERMINAL *nterm);
int del_curterm(TERMINAL *oterm);
int restartterm(const char *term, int filedes, int *errret);

char *tparm(const char *str, ...);
int tputs(const char *str, int affcnt, int (*putc)(int));
int putp(const char *str);

int vidputs(chtype attrs, int (*putc)(int));
int vidattr(chtype attrs);
int vid_puts(attr_t attrs, short pair, void *opts, int (*putc)(int));
int vid_attr(attr_t attrs, short pair, void *opts);

int mvcur(int oldrow, int oldcol, int newrow, int newcol);

int tigetflag(const char *capname);
int tigetnum(const char *capname);
char *tigetstr(const char *capname);

char *tiparm(const char *str, ...);
|#

;; TODO
(in-package #:binding)

#|
int touchwin(WINDOW *win);
int touchline(WINDOW *win, int start, int count);
int untouchwin(WINDOW *win);
int wtouchln(WINDOW *win, int y, int n, int changed);
bool is_linetouched(WINDOW *win, int line);
bool is_wintouched(WINDOW *win);
|#

(defcfun "touchwin" :int
  (win window))

(defcfun "touchline" :int
  (win window)
  (start :int)
  (count :int))

(defcfun "untouchwin" :int
  (win window))

(defcfun "wtouchln" :int
  (win window)
  (y :int)
  (n :int)
  (changed :int))

(defcfun "is_linetouched" :boolean
  (win window)
  (line :int))

(defcfun "is_wintouched" :boolean
  (win window))
(in-package #:binding)

#|
unsigned curses_trace(const unsigned param);

void _tracef(const char *format, ...);

char *_traceattr(attr_t attr);
char *_traceattr2(int buffer, chtype ch);
char *_tracecchar_t(const cchar_t *string);
char *_tracecchar_t2(int buffer, const cchar_t *string);
char *_tracechar(int ch);
char *_tracechtype(chtype ch);
char *_tracechtype2(int buffer, chtype ch);

void _tracedump(const char *label, WINDOW *win);
char *_nc_tracebits(void);
char *_tracemouse(const MEVENT *event);

/* deprecated */
void trace(const unsigned int param);
|#

;; TODO
(in-package #:binding)

(defctype window :pointer)
(defctype screen :pointer)
(defctype file :pointer)

(defcstruct cchar_t
  (cchar_t-attr attr_t)
  (cchar_t-chars wchar_t :count 5)
  (cchar_t-ext_color :int))
(in-package #:binding)

#|
const char *unctrl(chtype c);
wchar_t *wunctrl(cchar_t *c);
const char *keyname(int c);
const char *key_name(wchar_t w);
void filter(void);
void nofilter(void);
void use_env(bool f);
void use_tioctl(bool f);
int putwin(WINDOW *win, FILE *filep);
WINDOW *getwin(FILE *filep);
int delay_output(int ms);
int flushinp(void);
|#

(defcfun "unctrl" :string
  (c chtype))

(defcfun "wunctrl" wchar_t
  (c :pointer (:struct cchar_t)))

(defcfun "keyname" :string
  (c :int))

(defcfun "key_name" :string
  (c wchar_t))

(defcfun "filter" :void)

(defcfun "nofilter" :void)

(defcfun "use_env" :void
  (f :boolean))

(defcfun "use_tioctl" :void
  (f :boolean))

;TODO
;; (defcfun "putwin" :int
;;   (win windo)
;;   (filep file))

;; (defcfun "getwin" window
;;   (filep :pointer (struct file)))

(defcfun "delay_output" :int
  (ms :int))

(defcfun "flushnip" :int)

(in-package #:binding)

#|
WINDOW *newwin(int nlines, int ncols,int begin_y, int begin_x); 
int delwin(WINDOW *win);
int mvwin(WINDOW *win, int y, int x);
WINDOW *subwin(WINDOW *orig, int nlines, int ncols, int begin_y, int begin_x);
-- WINDOW *derwin(WINDOW *orig, int nlines, int ncols, int begin_y, int begin_x);
-- int mvderwin(WINDOW *win, int par_y, int par_x);
WINDOW *dupwin(WINDOW *win);
-- void wsyncup(WINDOW *win);
int syncok(WINDOW *win, bool bf);
--void wcursyncup(WINDOW *win);
--void wsyncdown(WINDOW *win);

The subwindow functions (subwin, derwin, mvderwin, wsyncup,  wsyncdown, wcursyncup,  syncok)  are flaky, incompletely implemented, and not well tested.
|#

(defcfun "newwin" window
  (nlines :int)
  (ncols :int)
  (begin_y :int)
  (begin_x :int))

(defcfun "delwin" window
  (win window))

(defcfun "mvwin" window
  (win window)
  (y :int)
  (x :int))


(defcfun "subwin" window
  (orig window)
  (nlines :int)
  (ncols :int)
  (begin_y :int)
  (begin_x :int))

(defcfun "dupwin" window
  (win window))

(defcfun "syncok" :int
  (win window)
  (bf :boolean))
(in-package #:binding)

#|
int wresize(WINDOW *win, int lines, int columns);
|#

(defcfun "wresize" :int
  (win window)
  (lines :int)
  (columns :int))
